--- a/root/Verif.html
+++ b/root/Verif.html
@@ -25,7 +25,7 @@
         <p><br>Mon but : réprimer la triche</p>
         <img src="db/unknown2.png" alt="db/unknown2.png">
         <p><br><br><span style="font-size: 30px;">Que recherchez-vous ?</span></p>
-        <p><span style="font-size: 20px;">Si vous recherchez un logiciel (client inject, autoclique,etc) : <a href="db/recherche_exe_1.html">cette page</a>.</span></p>
+        <p><span style="font-size: 20px;">Si vous recherchez un logiciel (client inject, autoclique,etc) : <a href="https://julou74.github.io/main/db/recherche_exe_1.html">cette page</a>.</span></p>
         <p><span style="font-size: 20px;">Si vous recherchez une macro : <a href="db/recherche_macro1.html">cette page</a>.</span></p>
         <p><br><br><br><br>Discord : @julou74</p>
     </main>
